# ncnn-android-mobilefacenet

./: .gitignore  README.md  build.gradle  local.properties
app/: build.gradle  lint-baseline.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mobileface.param
app/src/main/java/com/tencent/mobilefacenet/: API.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  mobileface.id.h  mobilefacenet.cpp
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
